[gd_scene load_steps=7 format=2]

[ext_resource path="res://maps/main_menu/animated_menu.gd" type="Script" id=1]
[ext_resource path="res://interfaces/ground.gd" type="Script" id=3]
[ext_resource path="res://characters/enemies/dark_red.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/enemies/dark_blue.tscn" type="PackedScene" id=5]
[ext_resource path="res://interfaces/tileset_lighter.tres" type="TileSet" id=6]
[ext_resource path="res://characters/attack_alerts/mask.png" type="Texture" id=7]

[node name="animated_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="menu_layer" type="CanvasLayer" parent="."]

[node name="menu_transitioner" type="Node2D" parent="menu_layer"]

[node name="fader" type="CanvasModulate" parent="menu_layer/menu_transitioner"]
light_mask = 0

[node name="tween" type="Tween" parent="menu_layer/menu_transitioner"]

[node name="ground" type="Navigation2D" parent="."]
script = ExtResource( 3 )

[node name="tilemap" type="TileMap" parent="ground"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 65536, 0, 131074, 65537, 0, 131073, 65538, 0, 131075, 65542, 0, 131074, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131073, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 131073, 65549, 0, 131073, 65550, 0, 131075, 131072, 0, 65537, 131073, 0, 196608, 131074, 0, 65536, 131077, 0, 131074, 131078, 0, 65539, 131079, 0, 196608, 131080, 0, 196608, 131081, 0, 196608, 131082, 0, 196608, 131083, 0, 196608, 131084, 0, 196608, 131085, 0, 196608, 131086, 0, 65538, 131087, 0, 131075, 196608, 0, 65537, 196609, 0, 196608, 196610, 0, 65536, 196613, 0, 65537, 196614, 0, 196608, 196615, 0, 196608, 196616, 0, 2, 196617, 0, 196609, 196618, 0, 3, 196619, 0, 196608, 196620, 0, 196608, 196621, 0, 196608, 196622, 0, 196608, 196623, 0, 65538, 196624, 0, 131075, 262144, 0, 65537, 262145, 0, 196608, 262146, 0, 65538, 262147, 0, 131073, 262148, 0, 131073, 262149, 0, 65539, 262150, 0, 196608, 262151, 0, 196608, 262152, 0, 65536, 262154, 0, 65537, 262155, 0, 196608, 262156, 0, 196608, 262157, 0, 196608, 262158, 0, 196608, 262159, 0, 196608, 262160, 0, 65538, 262161, 0, 131075, 327680, 0, 196610, 327681, 0, 3, 327682, 0, 196608, 327683, 0, 196608, 327684, 0, 196608, 327685, 0, 196608, 327686, 0, 196608, 327687, 0, 196608, 327688, 0, 65538, 327689, 0, 131073, 327690, 0, 65539, 327691, 0, 196608, 327692, 0, 2, 327693, 0, 196609, 327694, 0, 196609, 327695, 0, 3, 327696, 0, 196608, 327697, 0, 65538, 327698, 0, 131073, 327699, 0, 131075, 393217, 0, 65537, 393218, 0, 196608, 393219, 0, 196608, 393220, 0, 196608, 393221, 0, 196608, 393222, 0, 196608, 393223, 0, 196608, 393224, 0, 196608, 393225, 0, 196608, 393226, 0, 196608, 393227, 0, 196608, 393228, 0, 65536, 393231, 0, 196610, 393232, 0, 3, 393233, 0, 196608, 393234, 0, 196608, 393235, 0, 65536, 458753, 0, 65537, 458754, 0, 196608, 458755, 0, 196608, 458756, 0, 196608, 458757, 0, 196608, 458758, 0, 196608, 458759, 0, 2, 458760, 0, 196609, 458761, 0, 3, 458762, 0, 196608, 458763, 0, 196608, 458764, 0, 65536, 458768, 0, 196610, 458769, 0, 196609, 458770, 0, 196609, 458771, 0, 196611, 524288, 0, 131074, 524289, 0, 65539, 524290, 0, 196608, 524291, 0, 196608, 524292, 0, 196608, 524293, 0, 2, 524294, 0, 196609, 524295, 0, 196611, 524297, 0, 196610, 524298, 0, 3, 524299, 0, 196608, 524300, 0, 65538, 524301, 0, 131073, 524302, 0, 131073, 524303, 0, 131073, 524304, 0, 131075, 589824, 0, 65537, 589825, 0, 196608, 589826, 0, 196608, 589827, 0, 2, 589828, 0, 196609, 589829, 0, 196611, 589834, 0, 65537, 589835, 0, 196608, 589836, 0, 196608, 589837, 0, 196608, 589838, 0, 196608, 589839, 0, 196608, 589840, 0, 65536, 655360, 0, 196610, 655361, 0, 196609, 655362, 0, 196609, 655363, 0, 196611, 655370, 0, 196610, 655371, 0, 196609, 655372, 0, 196609, 655373, 0, 196609, 655374, 0, 196609, 655375, 0, 196609, 655376, 0, 196611 )

[node name="dark_red" parent="ground" instance=ExtResource( 4 )]
position = Vector2( 155.546, 563.375 )
rotation = 0.702136

[node name="dark_red2" parent="ground" instance=ExtResource( 4 )]
position = Vector2( 748.154, 193.669 )
rotation = -0.784659

[node name="dark_blue" parent="ground" instance=ExtResource( 5 )]
position = Vector2( 739.661, 574.329 )
rotation = 1.13106

[node name="Camera2D" type="Camera2D" parent="ground"]
position = Vector2( 640, 360 )
current = true

[node name="background_light" type="Light2D" parent="ground"]
position = Vector2( 535.193, 408.059 )
texture = ExtResource( 7 )
texture_scale = 3.0
energy = 0.0
shadow_enabled = true
